--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>会議室クイズ</title>
   <link rel="stylesheet" href="style.css">
@@ -11,6 +11,8 @@
   <div id="choices"></div>
   <button id="answer">回答する</button>
   <div id="result"></div>
+
+  <script src="config.js"></script> <!-- ← configを先に読み込む -->
   <script src="script.js"></script>
 </body>
 </html>
