--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 </head>
 <body>
   <h1 id="question">読み込み中...</h1>
+
   <div id="choices"></div>
+
   <button id="answer">回答する</button>
   <div id="result"></div>
 
-  <script src="config.js"></script> <!-- ← configを先に読み込む -->
-  <script src="script.js"></script>
+  <!-- 順番が重要！ -->
+  <script src="config.js"></script> <!-- GASのURL設定 -->
+  <script src="script.js"></script> <!-- クイズロジック本体 -->
 </body>
 </html>
