--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1 id="question">読み込み中...</h1>
+  <button id="start-button">問題を作成する</button>
 
+  <h1 id="question" style="display:none;">読み込み中...</h1>
   <div id="choices"></div>
 
-  <button id="answer">回答する</button>
+  <button id="answer" style="display:none;">回答する</button>
   <div id="result"></div>
 
-  <!-- 順番が重要！ -->
-  <script src="config.js"></script> <!-- GASのURL設定 -->
-  <script src="script.js"></script> <!-- クイズロジック本体 -->
+  <button id="check-score" style="display:none;">正解数は？</button>
+  <div id="score"></div>
+
+  <script src="config.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
