--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
 <body>
   <button id="start-button">問題を作成する</button>
 
-  <h1 id="question" style="display:none;">読み込み中...</h1>
-  <div id="choices"></div>
-
-  <button id="answer" style="display:none;">回答する</button>
-  <div id="result"></div>
+  <div id="quiz-container" style="display:none;"></div>
 
   <button id="check-score" style="display:none;">正解数は？</button>
   <div id="score"></div>
