--- a/index.html
+++ b/index.html
@@ -40,34 +40,35 @@
 
 <body>
 
-  <h1>会議室クイズ - 出題設定</h1>
+  <h1>会議室クイズ</h1>
 
-  <!-- シート名タブ -->
+  <!-- 検証用ボタン -->
+  <button id="meta-button">タブを作成</button>
+
+  <!-- タブ表示領域 -->
   <div class="tab-container" id="sheet-tabs"></div>
-
-  <!-- 会場名タブ -->
   <div class="tab-container" id="room-tabs"></div>
-
-  <!-- ヘッダータブ -->
   <div class="tab-container" id="header-tabs"></div>
 
-  <!-- スタートボタン -->
+  <!-- 既存のスタートボタン -->
   <button id="start-button">問題を作成する</button>
 
   <div id="quiz-container" style="display:none;"></div>
-
   <button id="check-score" style="display:none;">正解数は？</button>
   <div id="score"></div>
 
   <script src="config.js"></script>
   <script>
-    async function initMetaTabs() {
+    document.getElementById("meta-button").addEventListener("click", async () => {
       try {
-        const res = await fetch("/api/getQuizMeta"); // Vercel API
+        const res = await fetch("/api/getQuizMeta");
         const meta = await res.json();
+
+        console.log("取得結果:", meta);
 
         // シート名タブ
         const sheetTabs = document.getElementById("sheet-tabs");
+        sheetTabs.innerHTML = "";
         meta.sheetNames.forEach(name => {
           const btn = document.createElement("button");
           btn.textContent = name;
@@ -81,11 +82,12 @@
 
         // 会場名タブ
         const roomTabs = document.getElementById("room-tabs");
+        roomTabs.innerHTML = "";
         meta.roomNames.forEach(room => {
           const btn = document.createElement("button");
           btn.textContent = room;
           btn.onclick = () => {
-            btn.classList.toggle("active"); // 複数選択OK
+            btn.classList.toggle("active");
             console.log("選択会場:", room);
           };
           roomTabs.appendChild(btn);
@@ -93,12 +95,13 @@
 
         // ヘッダータブ（仮：rooms固定）
         const headerTabs = document.getElementById("header-tabs");
+        headerTabs.innerHTML = "";
         if (meta.headersMap["rooms"]) {
           meta.headersMap["rooms"].forEach(header => {
             const btn = document.createElement("button");
             btn.textContent = header;
             btn.onclick = () => {
-              btn.classList.toggle("active"); // 複数選択OK
+              btn.classList.toggle("active");
               console.log("選択項目:", header);
             };
             headerTabs.appendChild(btn);
@@ -108,9 +111,7 @@
       } catch (err) {
         console.error("取得失敗", err);
       }
-    }
-
-    initMetaTabs();
+    });
   </script>
   <script src="script.js"></script>
 </body>
