--- a/index.html
+++ b/index.html
@@ -1,118 +1,30 @@
 <!DOCTYPE html>
 <html lang="ja">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-  <title>会議室クイズ</title>
-
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
-  <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
-
-  <link rel="manifest" href="/manifest.json">
-  <link rel="apple-touch-icon" href="/icon-192.png">
-  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      font-family: 'M PLUS Rounded 1c', sans-serif;
-    }
-    .tab-container {
-      margin: 20px 0;
-    }
-    .tab-container button {
-      margin: 4px;
-      padding: 8px 14px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    .tab-container button.active {
-      background-color: #4CAF50;
-      color: white;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>クイズテスト</title>
 </head>
-
 <body>
+  <h1>テスト表示</h1>
 
-  <h1>会議室クイズ</h1>
+  <button id="load-rooms">会場名を取得</button>
+  <pre id="rooms-output"></pre>
 
-  <!-- 検証用ボタン -->
-  <button id="meta-button">タブを作成</button>
+  <button id="load-meta">メタ情報を取得</button>
+  <pre id="meta-output"></pre>
 
-  <!-- タブ表示領域 -->
-  <div class="tab-container" id="sheet-tabs"></div>
-  <div class="tab-container" id="room-tabs"></div>
-  <div class="tab-container" id="header-tabs"></div>
-
-  <!-- 既存のスタートボタン -->
-  <button id="start-button">問題を作成する</button>
-
-  <div id="quiz-container" style="display:none;"></div>
-  <button id="check-score" style="display:none;">正解数は？</button>
-  <div id="score"></div>
-
-  <script src="config.js"></script>
+  <script src="api/config.js"></script>
+  <script src="api/quiz.js"></script>
   <script>
-    document.getElementById("meta-button").addEventListener("click", async () => {
-      try {
-        const res = await fetch("/api/getQuizMeta");
-        const meta = await res.json();
+    document.getElementById("load-rooms").addEventListener("click", async () => {
+      const data = await fetchRooms();
+      document.getElementById("rooms-output").textContent = JSON.stringify(data, null, 2);
+    });
 
-        console.log("取得結果:", meta);
-
-        // シート名タブ
-        const sheetTabs = document.getElementById("sheet-tabs");
-        sheetTabs.innerHTML = "";
-        meta.sheetNames.forEach(name => {
-          const btn = document.createElement("button");
-          btn.textContent = name;
-          btn.onclick = () => {
-            document.querySelectorAll("#sheet-tabs button").forEach(b => b.classList.remove("active"));
-            btn.classList.add("active");
-            console.log("選択シート:", name);
-          };
-          sheetTabs.appendChild(btn);
-        });
-
-        // 会場名タブ
-        const roomTabs = document.getElementById("room-tabs");
-        roomTabs.innerHTML = "";
-        meta.roomNames.forEach(room => {
-          const btn = document.createElement("button");
-          btn.textContent = room;
-          btn.onclick = () => {
-            btn.classList.toggle("active");
-            console.log("選択会場:", room);
-          };
-          roomTabs.appendChild(btn);
-        });
-
-        // ヘッダータブ（仮：rooms固定）
-        const headerTabs = document.getElementById("header-tabs");
-        headerTabs.innerHTML = "";
-        if (meta.headersMap["rooms"]) {
-          meta.headersMap["rooms"].forEach(header => {
-            const btn = document.createElement("button");
-            btn.textContent = header;
-            btn.onclick = () => {
-              btn.classList.toggle("active");
-              console.log("選択項目:", header);
-            };
-            headerTabs.appendChild(btn);
-          });
-        }
-
-      } catch (err) {
-        console.error("取得失敗", err);
-      }
+    document.getElementById("load-meta").addEventListener("click", async () => {
+      const data = await fetchQuizMeta();
+      document.getElementById("meta-output").textContent = JSON.stringify(data, null, 2);
     });
   </script>
-  <script src="script.js"></script>
 </body>
 </html>
