--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <select id="sheet-select">
     <option value="rooms">会場情報（rooms）</option>
     <option value="price">料金情報（price）</option>
+    <option value="layout">レイアウト情報（layout）</option>
   </select>
 
   <button id="start-button">問題を作成する</button>
