--- a/index.html
+++ b/index.html
@@ -25,12 +25,15 @@
 </head>
 
 <body>
-  <label for="sheet-select">出題データを選択：</label>
-  <select id="sheet-select">
+<div class="select-wrapper">
+  <label for="sheet-select" class="select-label">クイズのテーマを選ぶ</label>
+  <select id="sheet-select" class="styled-select">
     <option value="rooms">会場情報（rooms）</option>
     <option value="price">料金情報（price）</option>
     <option value="layout">レイアウト情報（layout）</option>
   </select>
+</div>
+
 
   <button id="start-button">問題を作成する</button>
 
