--- a/index.html
+++ b/index.html
@@ -20,17 +20,18 @@
 </head>
 
 <body>
-  <!-- 左上ロゴ -->
+  <!-- 左下ロゴ -->
   <div id="logo-bar">
     <span id="logo-text">AICC</span>
   </div>
 
- <h1 class="app-title">AICC Quiz</h1>
-
+  <h1 class="app-title">AICC Quiz</h1>
 
   <!-- 階層1 -->
-  <h2 class="section-title">カテゴリ</h2>
-  <div class="tab-group" id="sheet-tabs">
+  <h2 class="section-title" data-target="sheet-tabs">
+    カテゴリ <span class="selected-summary"></span>
+  </h2>
+  <div class="tab-group" id="sheet-tabs" style="display:none;">
     <button data-sheet="rooms" class="tab">会場情報</button>
     <button data-sheet="price" class="tab">料金情報</button>
     <button data-sheet="layout" class="tab">レイアウト情報</button>
@@ -40,24 +41,32 @@
   </div>
 
   <!-- 階層2 -->
-  <h2 class="section-title">項目</h2>
-  <div class="tab-group" id="header-tabs"></div>
+  <h2 class="section-title" data-target="header-tabs">
+    項目 <span class="selected-summary"></span>
+  </h2>
+  <div class="tab-group" id="header-tabs" style="display:none;"></div>
 
   <!-- 階層3 -->
-  <h2 class="section-title">会場</h2>
-  <div class="tab-group" id="room-tabs"></div>
+  <h2 class="section-title" data-target="room-tabs">
+    会場 <span class="selected-summary"></span>
+  </h2>
+  <div class="tab-group" id="room-tabs" style="display:none;"></div>
 
   <!-- 階層4 -->
-  <h2 class="section-title">出題数</h2>
-  <div class="tab-group" id="quiz-count-tabs">
+  <h2 class="section-title" data-target="quiz-count-tabs">
+    出題数 <span class="selected-summary"></span>
+  </h2>
+  <div class="tab-group" id="quiz-count-tabs" style="display:none;">
     <button data-count="10" class="tab active">10問</button>
     <button data-count="20" class="tab">20問</button>
     <button data-count="30" class="tab">30問</button>
   </div>
 
   <!-- 階層5 -->
-  <h2 class="section-title">回答形式</h2>
-  <div class="tab-group" id="quiz-mode-tabs">
+  <h2 class="section-title" data-target="quiz-mode-tabs">
+    回答形式 <span class="selected-summary"></span>
+  </h2>
+  <div class="tab-group" id="quiz-mode-tabs" style="display:none;">
     <button data-mode="choice" class="tab active">選択</button>
     <button data-mode="input" class="tab">記述</button>
   </div>
@@ -81,35 +90,5 @@
 
   <script src="config.js"></script>
   <script src="script.js"></script>
-  <script>
-    const logo = document.getElementById("logo-text");
-    const viewer = document.getElementById("image-viewer");
-    const backBtn = document.getElementById("back-button");
-
-    // AICCクリックで画像ビュー表示
-    logo.onclick = () => {
-      document.body.querySelectorAll("h1, h2, .tab-group, #start-button, #quiz-container, #check-score, #score")
-        .forEach(el => el.style.display = "none");
-      viewer.classList.add("active");
-      viewer.classList.remove("closing");
-      viewer.style.display = "flex";
-    };
-
-    // 戻るボタンでクイズUI復活
-    backBtn.onclick = () => {
-      viewer.classList.add("closing");
-      viewer.classList.remove("active");
-
-      // アニメーションが終わったら非表示にする
-      viewer.addEventListener("transitionend", function handler() {
-        if (viewer.classList.contains("closing")) {
-          viewer.style.display = "none";
-          document.body.querySelectorAll("h1, h2, .tab-group, #start-button, #quiz-container, #check-score, #score")
-            .forEach(el => el.style.display = "");
-        }
-        viewer.removeEventListener("transitionend", handler);
-      });
-    };
-  </script>
 </body>
 </html>
